update to use ngrx helpers

--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -16,7 +16,7 @@
       <td></td>
     </tr>
   </thead>
-  <tbody *ngFor="let item of items | async">
+  <tbody *ngFor="let item of (items | async)">
     <tr>
       <td>
         <span [ngSwitch]="stockLevel(item)">
