upgrading to angular 5 + tachyons

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<hero-unit></hero-unit>
-<h2>
-  <a routerLink="/items">See Items</a>
+<app-hero-unit></app-hero-unit>
+
+<h2 class="tc">
+  <a routerLink="/items">See Inventory</a>
 </h2>
