--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -1,14 +1,16 @@
-<h3>
-  Items
-  <small class="subtle">
-    <!-- <i class="fa fa-exclamation-circle" [ngStyle]="{ color: 'red' }" *ngIf="item.quantity === 0"></i>
-    <i class="fa fa-warning" [ngStyle]="{ color: 'orange' }" *ngIf="hasLowStock(item)"></i> -->
-  </small>
-</h3>
-<table class="table">
-  <thead>
-    <tr>
-      <td></td>
+<header class="mv3">
+  <h2>
+    Items
+    <small class="light-gray">
+      <!-- <i class="fa fa-exclamation-circle" [ngStyle]="{ color: 'red' }" *ngIf="item.quantity === 0"></i>
+      <i class="fa fa-warning" [ngStyle]="{ color: 'orange' }" *ngIf="hasLowStock(item)"></i> -->
+    </small>
+  </h2>
+</header>
+
+<table class="w-100">
+  <thead class="">
+    <tr class="h2 b bb">
       <td>Code</td>
       <td>Name</td>
       <td>Description</td>
@@ -17,33 +19,39 @@
     </tr>
   </thead>
   <tbody *ngFor="let item of (items | async)">
-    <tr>
-      <td>
-        <span [ngSwitch]="stockLevel(item)">
+    <tr class="mv1">
+      <td class="flex">
+        <span [ngSwitch]="stockLevel(item)" class="pr2 w1">
           <i *ngSwitchCase="StockLevel.out" class="fa fa-exclamation-circle" [ngStyle]="{ color: 'red' }"></i>
           <i *ngSwitchCase="StockLevel.low" class="fa fa-warning" [ngStyle]="{ color: 'orange' }"></i>
           <i *ngSwitchCase="StockLevel.overstock" class="fa fa-tint" [ngStyle]="{ color: 'blue' }"></i>
           <i *ngSwitchDefault class="fa fa-check" [ngStyle]="{ color: 'green' }"></i>
         </span>
-      </td>
-      <td>
         <a [routerLink]="['/items', item.id]">{{ item.code }}</a>
       </td>
       <td>{{ item.name }}</td>
       <td>{{ item.description }}</td>
-      <td class="text-right">{{ item.quantity | number }}</td>
+      <td class="flex items-center">
+        <span class="w-30">
+          {{ (item.quantity || 0) | number }}
+        </span>
+        <span class="w-70">
+            <app-quantity-editor [item]="item" (change)="onQuantityChange($event)"></app-quantity-editor>
+        </span>
+      </td>
       <td>
-        <quantity-editor [item]="item" (change)="onQuantityChange($event)"></quantity-editor>
-        <a class="btn btn-xs btn-danger" (click)="removeItem(item)">
+        <button class="link br2 pa2 ml2 bg-red white" (click)="removeItem(item)">
           <i class="fa fa-remove"></i>
-        </a>
+        </button>
       </td>
     </tr>
   </tbody>
 </table>
+
 <div *ngIf="error | async" class="text-danger well">
   {{ error | async }}
 </div>
-<div>
-  <button class="btn" (click)="addItem()">Add New</button>
+
+<div class="mv3">
+  <button class="pa2 bg-gray white" (click)="addItem()">Add New</button>
 </div>
