--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,23 @@
-<main class="avenir">
-  <app-header [title]="title"></app-header>
-  <router-outlet></router-outlet>
-</main>
+<div class="container mw7 mw7-ns center pa2 ph3-ns">
+  <header class="bg-white black-80 tc pv4 avenir">
+    <h1 class="mt2 mb0 baskerville i fw1 f1">{{ title }}</h1>
+    <nav class="bt bb tc mw7 center mt4">
+      <a class="f6 f5-l link bg-animate black-80 hover-bg-lightest-blue dib pa3 ph4-l" routerLink="/">Home</a>
+      <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" routerLink="/items">Inventory</a>
+      <a class="f6 f5-l link bg-animate black-80 hover-bg-light-pink dib pa3 ph4-l" routerLink="/about">About</a>
+    </nav>
+  </header>
+
+  <main class="avenir ">
+    <router-outlet></router-outlet>
+  </main>
+
+  <footer class="pv4 ph3 ph5-m ph6-l mid-gray">
+    <small class="f6 db tc">© 2017 <b class="ttu">Inventory Trax</b>, All Rights Reserved</small>
+    <div class="tc mt3">
+      <a routerLink="/language/" title="Language" class="f6 dib ph2 link mid-gray dim">Language</a>
+      <a routerLink="/terms/"    title="Terms" class="f6 dib ph2 link mid-gray dim">Terms of Use</a>
+      <a routerLink="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim">Privacy</a>
+    </div>
+  </footer>
+</div>
