--- a/src/app/items/components/item-list.component.html
+++ b/src/app/items/components/item-list.component.html
@@ -1,21 +1,22 @@
-<app-title title="Items">
-  &nbsp;
-  <i class="fa fa-spinner fa-spin" *ngIf="(model | async)?.isBusy"></i>
-  <small class="red f6" *ngIf="(model | async)?.error" title="{{ (model | async)?.error }}">
-    <i class="fa fa-warning"></i>
-    Error
-  </small>
-</app-title>
+<div class="fl w-50">
+  <app-title title="Items">
+    &nbsp;
+    <i class="fa fa-spinner fa-spin" *ngIf="(model | async)?.isBusy"></i>
+  </app-title>
+</div>
+<div class="fl w-50">
+  <app-item-filter (valueChanged)="onFilterChanged($event)">
+  </app-item-filter>
+</div>
 
 <table class="w-100">
   <thead class="">
     <tr class="h2 b bb">
-      <td>Code</td>
+      <td></td>
       <td>Name</td>
       <td>Description</td>
-      <td>Quantity</td>
-      <td></td>
-      <td></td>
+      <td class="tr pr3">Quantity</td>
+      <td class="tc">Actions</td>
     </tr>
   </thead>
   <tbody *ngFor="let item of (model | async).items">
@@ -27,17 +28,16 @@
           <i *ngSwitchCase="StockLevel.overstock" class="fa fa-tint" [ngStyle]="{ color: 'blue' }"></i>
           <i *ngSwitchDefault class="fa fa-check" [ngStyle]="{ color: 'green' }"></i>
         </span>
-        <a [routerLink]="['/items', item.id]">{{ item.code }}</a>
       </td>
-      <td>{{ item.name }}</td>
-      <td>{{ item.description | truncate:40 }}</td>
       <td>
+        <a [routerLink]="['/items', item.id]">{{ item.name }}</a>
+      </td>
+      <td>{{ item.description | ellipse:40 }}</td>
+      <td class="tr pr3">
         {{ (item.quantity || 0) | number }}
       </td>
-      <td>
+      <td class="tc">
         <app-quantity-editor [item]="item" (change)="quantityChanged(item, $event)"></app-quantity-editor>
-      </td>
-      <td>
         <button class="link br2 pa2 ml2 bg-red white" (click)="deleteItem(item)">
           <i class="fa fa-remove"></i>
         </button>
