--- a/src/app/items/containers/item-list.component.html
+++ b/src/app/items/containers/item-list.component.html
@@ -19,7 +19,7 @@
       <td class="tc">Actions</td>
     </tr>
   </thead>
-  <tbody *ngFor="let item of (model | async).items">
+  <tbody *ngFor="let item of (model | async)?.entities">
     <tr class="mv1">
       <td>
         <span [ngSwitch]="stockLevel(item)" class="pr2 w1">
@@ -30,7 +30,7 @@
         </span>
       </td>
       <td>
-        <a [routerLink]="['/items', item.id]">{{ item.name }}</a>
+        <a routerLink (click)="navigateToItemDetails(item)">{{ item.name }}</a>
       </td>
       <td>{{ item.description | ellipse:40 }}</td>
       <td class="tr pr3">
