--- a/src/app/items/containers/item-list.component.html
+++ b/src/app/items/containers/item-list.component.html
@@ -1,13 +1,16 @@
-<div class="fl w-50">
-  <app-title title="Items">
-    &nbsp;
-    <i class="fa fa-spinner fa-spin" *ngIf="(model | async)?.isBusy"></i>
-  </app-title>
-</div>
-<div class="fl w-50">
-  <app-item-filter (valueChanged)="onFilterChanged($event)">
-  </app-item-filter>
-</div>
+<header class="flex">
+  <div class="w-50">
+    <app-title title="Items">
+      &nbsp;
+      <i class="fa fa-spinner fa-spin" *ngIf="(model | async)?.isBusy"></i>
+    </app-title>
+  </div>
+  
+  <div class="w-50">
+    <app-item-filter (valueChanged)="onFilterChanged($event)">
+    </app-item-filter>
+  </div>     
+</header>
 
 <table class="w-100">
   <thead class="">
