--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
       <a class="f6 f5-l link bg-animate black-80 hover-bg-lightest-blue dib pa3 ph4-l" routerLink="/">Home</a>
       <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" routerLink="/items">Inventory</a>
       <a class="f6 f5-l link bg-animate black-80 hover-bg-light-pink dib pa3 ph4-l" routerLink="/about">About</a>
+      <a class="f6 f5-l link bg-animate black-80 hover-bg-light-pink dib pa3 ph4-l" routerLink="/lazy">Lazy</a>
     </nav>
   </header>
 
