--- a/src/app/items/containers/item-list.component.html
+++ b/src/app/items/containers/item-list.component.html
@@ -22,26 +22,48 @@
       <td class="tc">Actions</td>
     </tr>
   </thead>
-  <tbody *ngFor="let item of (model | async)?.entities">
+  <tbody *ngFor="let item of (model | async)?.entities; trackBy: trackByFn">
     <tr class="mv1">
       <td>
         <span [ngSwitch]="stockLevel(item)" class="pr2 w1">
-          <i *ngSwitchCase="StockLevel.out" class="fa fa-exclamation-circle" [ngStyle]="{ color: 'red' }"></i>
-          <i *ngSwitchCase="StockLevel.low" class="fa fa-warning" [ngStyle]="{ color: 'orange' }"></i>
-          <i *ngSwitchCase="StockLevel.overstock" class="fa fa-tint" [ngStyle]="{ color: 'blue' }"></i>
-          <i *ngSwitchDefault class="fa fa-check" [ngStyle]="{ color: 'green' }"></i>
+          <i
+            *ngSwitchCase="StockLevel.out"
+            class="fa fa-exclamation-circle"
+            [ngStyle]="{ color: 'red' }"
+          ></i>
+          <i
+            *ngSwitchCase="StockLevel.low"
+            class="fa fa-warning"
+            [ngStyle]="{ color: 'orange' }"
+          ></i>
+          <i
+            *ngSwitchCase="StockLevel.overstock"
+            class="fa fa-tint"
+            [ngStyle]="{ color: 'blue' }"
+          ></i>
+          <i
+            *ngSwitchDefault
+            class="fa fa-check"
+            [ngStyle]="{ color: 'green' }"
+          ></i>
         </span>
       </td>
       <td>
         <a routerLink (click)="navigateToItemDetails(item)">{{ item.name }}</a>
       </td>
-      <td>{{ item.description | ellipse:40 }}</td>
+      <td>{{ item.description | ellipse: 40 }}</td>
       <td class="tr pr3">
-        {{ (item.quantity || 0) | number }}
+        {{ item.quantity || 0 | number }}
       </td>
       <td class="tc">
-        <app-quantity-editor [quantity]="item.quantity" (change)="quantityChanged(item, $event)"></app-quantity-editor>
-        <button class="link br2 pa2 ml2 bg-red white" (click)="deleteItem(item)">
+        <app-quantity-editor
+          [quantity]="item.quantity"
+          (change)="quantityChanged(item, $event)"
+        ></app-quantity-editor>
+        <button
+          class="link br2 pa2 ml2 bg-red white"
+          (click)="deleteItem(item)"
+        >
           <i class="fa fa-remove"></i>
         </button>
       </td>
